// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlankPluginCard should render 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
    data-testid="Card"
  >
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
      />
      <div
        class="flex flex-col truncate"
      >
        <span
          class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          Author
        </span>
        <div
          class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          Name
        </div>
      </div>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`BlankPluginCard should render with category 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
    data-testid="Card"
  >
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
      />
      <div
        class="flex flex-col truncate"
      >
        <span
          class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          Author
        </span>
        <div
          class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          Name
        </div>
        <div
          class="flex items-center space-x-2 mt-4 text-theme-primary-100 dark:text-theme-secondary-800"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              category.svg
            </svg>
          </div>
          <span
            class="text-sm font-semibold"
          >
            Exchange
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`BlankPluginCard should render with name 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
    data-testid="Card"
  >
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
      />
      <div
        class="flex flex-col truncate"
      >
        <span
          class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          Author
        </span>
        <div
          class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
        >
          test-name
        </div>
      </div>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`PluginCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
      data-testid="Card"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
        >
          <div
            class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
            data-testid="PluginImage__placeholder"
          >
            <svg>
              plugin-logo-placeholder.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ARK.io
          </span>
          <div
            class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <span />
          </div>
          <div
            class="flex items-center space-x-2 mt-4 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                category.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Utility
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render grant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
      data-testid="Card"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
        >
          <div
            class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
            data-testid="PluginImage__placeholder"
          >
            <svg>
              plugin-logo-placeholder.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ARK.io
          </span>
          <div
            class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <span>
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center space-x-2 mt-4 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                category.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Utility
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render official icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
      data-testid="Card"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
        >
          <div
            class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
            data-testid="PluginImage__placeholder"
          >
            <svg>
              plugin-logo-placeholder.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ARK.io
          </span>
          <div
            class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <span>
              <div
                class="sc-bdfBwQ fpbFeh"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </span>
          </div>
          <div
            class="flex items-center space-x-2 mt-4 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                category.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Utility
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render without category 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
      data-testid="Card"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
        >
          <div
            class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
            data-testid="PluginImage__placeholder"
          >
            <svg>
              plugin-logo-placeholder.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ARK.io
          </span>
          <div
            class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <span />
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger view 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
      data-testid="Card"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
        >
          <div
            class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
            data-testid="PluginImage__placeholder"
          >
            <svg>
              plugin-logo-placeholder.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            ARK.io
          </span>
          <div
            class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <span />
          </div>
          <div
            class="flex items-center space-x-2 mt-4 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                category.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Utility
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
